# RuVector

./: Cargo.toml
crates/ruvector-layoff-trap/: Cargo.toml
crates/ruvector-layoff-trap/src/: circulation.rs  data.rs  lib.rs  sectors.rs  simulation.rs
crates/ruvector-layoff-trap/tests/: integration.rs
docs/research/ji-framework/: README.md
docs/research/naval-capacity/: naval-capacity-model.md
examples/decompiler-dashboard/: package.json
examples/edge-net/sim/: package.json
examples/wasm-react/: package.json
npm/: package-lock.json
ui/ruvocal/: package.json
